--- a/ensemble/ensemble_prediction.ipynb
+++ b/ensemble/ensemble_prediction.ipynb
@@ -119,17 +119,17 @@
    ],
    "source": [
     "# Loading smi model , smi_x test and creating predictions\n",
-    "smi_x_tes = np.loadtxt(\"./smi_input/x_test.txt\")\n",
+    "smi_x_tes = np.loadtxt(\"./data/x_test.txt\")\n",
     "smi_model = load_model(smi.config.best_model)\n",
     "smi_pred = smi_model.predict(smi_x_tes).ravel()\n",
     "\n",
     "# Loading mdm model, mdm_x_test and creating predictions\n",
-    "mdm_x_test = np.loadtxt(\"./input/x_test.txt\")\n",
+    "mdm_x_test = np.loadtxt(\"./data/x_test.txt\")\n",
     "mdm_model = load_model(mdm.config.best_model)\n",
     "mdm_pred = mdm_model.predict(mdm_x_test).reshape(-1,)\n",
     "\n",
     "# loading y_test, y from all models is identical, using mdm for convenience \n",
-    "y_test = np.loadtxt(\"./input/y_test.txt\")"
+    "y_test = np.loadtxt(\"./data/y_test.txt\")"
    ]
   },
   {
