fixed some imports again

--- a/gnn/predict.nbconvert.ipynb
+++ b/gnn/predict.nbconvert.ipynb
@@ -3,7 +3,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-05T23:19:39.567671Z",
+     "iopub.status.busy": "2025-02-05T23:19:39.566414Z",
+     "iopub.status.idle": "2025-02-05T23:19:49.722848Z",
+     "shell.execute_reply": "2025-02-05T23:19:49.721628Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import gzip, pickle\n",
@@ -22,7 +29,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-05T23:19:49.726851Z",
+     "iopub.status.busy": "2025-02-05T23:19:49.726363Z",
+     "iopub.status.idle": "2025-02-05T23:19:50.234020Z",
+     "shell.execute_reply": "2025-02-05T23:19:50.231904Z"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -50,7 +64,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-05T23:19:50.289343Z",
+     "iopub.status.busy": "2025-02-05T23:19:50.288943Z",
+     "iopub.status.idle": "2025-02-05T23:19:50.491354Z",
+     "shell.execute_reply": "2025-02-05T23:19:50.490290Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -73,13 +94,26 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-05T23:19:50.494988Z",
+     "iopub.status.busy": "2025-02-05T23:19:50.494626Z",
+     "iopub.status.idle": "2025-02-05T23:19:51.469344Z",
+     "shell.execute_reply": "2025-02-05T23:19:51.468449Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train results\n",
+      "train results\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "r2: 0.7786\n",
       "rmse: 1.0443\n",
       "sp: 0.8907\n",
@@ -121,7 +155,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test results\n",
+      "test results\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "r2: 0.7075\n",
       "rmse: 1.3117\n",
       "sp: 0.9123\n",
